--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <title>Justin Slocum</title>
- <link rel="stylesheet" href="styles.css">
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	
