--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <title>Justin Slocum</title>
  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<div id = "main"> </div>
+	<div class="wrapper">
+		<h1>Justin Slocum</h1>
+		<div class="main"> 
+
+
+		</div>
+	</div>
 </body>
 
 
