--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Justin Slocum</title>
  <link rel="stylesheet" href="style.css">
+ <link href="http://fonts.googleapis.com/css?family=Raleway:100,200,300,400" rel="stylesheet" type="text/css">
 </head>
 
 <body>
