Add resume button and update font

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<div class="wrapper">
 		<div class="main"> 
 			<h1>Justin Slocum</h1>
-
+			<p>Programmer extraordinaire.</p>
+			<div id="resumeButton">Resumé</div>
 		</div>
 	</div>
 </body>
-
 
 </html>
