Update resume button css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="main"> 
 			<h1>Justin Slocum</h1>
 			<p>Programmer extraordinaire.</p>
-			<div id="resumeButton">Resumé</div>
+			<div id="resumeButton" class="headerButton">Resumé</div>
 		</div>
 	</div>
 </body>
