Add contact buttons and animations

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 <title>Justin Slocum</title>
  <link rel="stylesheet" href="style.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <script src="./resources/indexScript.js"></script>
+ <script src="https://kit.fontawesome.com/ae135ef840.js"></script>
  <link href="http://fonts.googleapis.com/css?family=Raleway:100,200,300,400" rel="stylesheet" type="text/css">
 </head>
 
@@ -10,7 +13,12 @@
 		<div class="main"> 
 			<h1>Justin Slocum</h1>
 			<p>Programmer extraordinaire.</p>
-			<div id="resumeButton" class="headerButton">Resumé</div>
+			<div class="contactIcons">
+				<a class="fa-github-square" class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Github"></a>
+				<a class="fa-linkedin" class="ttbutton" href="https://www.linkedin.com/in/justin-slocum-52aa2a18b/" label="LinkedIn"></a>
+				<a class="fa-envelope" class="ttbutton" href="mailto:justintaylorslocum@gmail.com" label="Email"></a>	
+				<a class="fa-file" class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Resumé"></a>			
+			</div>
 		</div>
 	</div>
 </body>
