Add contact icon labels

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 			<h1>Justin Slocum</h1>
 			<p>Programmer extraordinaire.</p>
 			<div class="contactIcons">
-				<a class="fa-github-square" class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Github"></a>
-				<a class="fa-linkedin" class="ttbutton" href="https://www.linkedin.com/in/justin-slocum-52aa2a18b/" label="LinkedIn"></a>
-				<a class="fa-envelope" class="ttbutton" href="mailto:justintaylorslocum@gmail.com" label="Email"></a>	
-				<a class="fa-file" class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Resumé"></a>			
+				<a class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Github"><i class="fa-github-square"></i></a>
+				<a class="ttbutton" href="https://www.linkedin.com/in/justin-slocum-52aa2a18b/" label="LinkedIn"><i class="fa-linkedin"></i></a>
+				<a class="ttbutton" href="mailto:justintaylorslocum@gmail.com" label="Email Me!"><i class="fa-envelope"></i></a>
+				<a class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Resumé"><i class="fa-file"></i></a>	
 			</div>
 		</div>
 	</div>
+	<div class="tooltip"></div>
 </body>
 
 </html>
