--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
  <script src="./resources/indexScript.js"></script>
  <script src="https://kit.fontawesome.com/ae135ef840.js"></script>
- <link href="http://fonts.googleapis.com/css?family=Raleway:100,200,300,400" rel="stylesheet" type="text/css">
+ <!-- <link href="http://fonts.googleapis.com/css?family=Raleway:100,200,300,400" rel="stylesheet" type="text/css"> -->
 </head>
 
 <body>
