Scaling for mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Justin Slocum</title>
  <link rel="stylesheet" href="style.css">
+ <meta name="viewport" content="width=1280, initial-scale=1">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
  <script src="./resources/indexScript.js"></script>
  <script src="https://kit.fontawesome.com/ae135ef840.js"></script>
