Add functionality to Resume Button and apply typing text effect to skill text.

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
  <script src="./resources/indexScript.js"></script>
+ <script src="./resources/skillsTextInteractive.js"></script>
  <script src="https://kit.fontawesome.com/ae135ef840.js"></script>
- <!-- <link href="http://fonts.googleapis.com/css?family=Raleway:100,200,300,400" rel="stylesheet" type="text/css"> -->
 </head>
 
 <body>
 	<div class="wrapper">
 		<div class="main"> 
-			<h1>Justin Slocum</h1>
-			<p>Programmer extraordinaire.</p>
+			<h1>Justin Taylor Slocum</h1>
+			<p></p>
 			<div class="contactIcons">
 				<a class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Github"><i class="fa-github-square"></i></a>
 				<a class="ttbutton" href="https://www.linkedin.com/in/justin-slocum-52aa2a18b/" label="LinkedIn"><i class="fa-linkedin"></i></a>
 				<a class="ttbutton" href="mailto:justintaylorslocum@gmail.com" label="Email Me!"><i class="fa-envelope"></i></a>
-				<a class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Resumé"><i class="fa-file"></i></a>	
+				<a class="ttbutton" label="Resumé"><i class="fa-file"></i></a>	
 			</div>
 		</div>
 	</div>
