Fix Microsoft Edge/IE compatibility

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Justin Slocum</title>
  <link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge" />
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
  <script src="./resources/indexScript.js"></script>
  <script src="./resources/skillsTextInteractive.js"></script>
@@ -18,7 +19,7 @@
 				<a class="ttbutton" href="https://github.com/JustinTaylorSlocum" label="Github"><i class="fa-github-square"></i></a>
 				<a class="ttbutton" href="https://www.linkedin.com/in/justin-slocum-52aa2a18b/" label="LinkedIn"><i class="fa-linkedin"></i></a>
 				<a class="ttbutton" href="mailto:justintaylorslocum@gmail.com" label="Email Me!"><i class="fa-envelope"></i></a>
-				<a class="ttbutton" label="Resumé"><i class="fa-file"></i></a>	
+				<a class="ttbutton" href="./resources/JustinTaylorSlocumResume.pdf" label="Resume"><i class="fa-file"></i></a>	
 			</div>
 		</div>
 	</div>
